2007-10-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added HTTP/1.1 keep alive and pipelining support.
	See --enable-http-keep-alive and --enable-http-pipelining option.
	* src/AbstractCommand.{h, cc}: Now it has one-to-many relation to
	Segment.
	* src/HttpDownloadCommand.{h, cc}
	* src/OptionHandlerFactory.cc
	* src/HttpConnection.{h, cc}
	* src/version_usage.cc
	* src/HttpInitiateConnectionCommand.cc
	* src/FtpInitiateConnectionCommand.cc
	* src/Segment.h
	* src/HttpRequestCommand.{h, cc}
	* src/option_processing.cc
	* src/prefs.h
	* src/HttpResponseCommand.cc
	* src/SegmentMan.{h, cc}
	* src/FtpNegotiateCommand.cc
	* src/HttpProxyResponseCommand.cc
	* src/Request.cc
	* src/HttpRequest.cc
	* src/DownloadCommand.cc
	* test/HttpRequestTest.cc
	* test/RequestTest.cc

2007-10-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/ConsoleCalc.cc (calculateStat): Hide SPD after the download
	finished.

2007-10-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/Metalink2RequestGroup.cc (generate): Throw exception instead of
	catching it inside the method.
	When no file entry is found in a metalink without querying user
	preferences, throw the exception with the error message that suggests
	metalink file is probably broken. 
	* src/RequestGroup.cc (postDownloadProcessing): Catch exception here.

2007-10-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that prevents remote Metalink/Torrent file from begin
	processed.
	* src/RequestGroupMan.cc (removeStoppedGroup)

	Added debug message.
	* src/BtPostDownloadHandler.cc
	* src/MetalinkPostDownloadHandler.cc
	* src/PostDownloadHandler.{h, cc}
	* src/RequestGroup.cc

2007-10-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/Request.cc (parseUrl): Removed unnecessary slashes around dir.

2007-10-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/MultiUrlRequestInfo.h: Updated the message shown when program