@@ -1,3 +1,13 @@
+2007-10-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	* src/Piece.{h, cc}: Added SubPiece infrastructure to track down
+	the data smaller than block length.
+	A block length can be specified by constructor's argument.
+	* src/DefaultPieceStorage.{h, cc} (getMissingPiece):
+	Get a missing piece in the range of given FileEntry. This function is
+	not used in the program yet.
+	* src/Util.h: Added some macros.
+
 2007-10-18  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Added HTTP/1.1 keep alive and pipelining support.
